--- a/my-project-practice/todo-app/package.json
+++ b/my-project-practice/todo-app/package.json
@@ -1,13 +1,11 @@
 {
   "name": "todo-app",
   "version": "1.0.0",
-  "description": "todolist",
+  "description": "this is project to management product",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app/index.js",
-    "dev": "nodemon app/index.js",
-    "command-test": "node app/index.js test"
+    "dev": "nodemon app/index.js"
   },
   "author": "khoa-ph",
   "license": "ISC",
