--- a/my-project-practice/weather-app/package.json
+++ b/my-project-practice/weather-app/package.json
@@ -14,6 +14,7 @@
     "nodemon": "^2.0.19"
   },
   "dependencies": {
+    "async-request": "^1.2.0",
     "express": "^4.18.1",
     "hbs": "^4.2.0"
   }
