--- a/new-nodejs-express-mongodb-bootcamp/Natour/config.env
+++ b/new-nodejs-express-mongodb-bootcamp/Natour/config.env
@@ -1,4 +1,5 @@
 NODE_ENV=development
 PORT=3000
-USERNAME=admin
-PASSWORD=admin
+DATABASE=mongodb+srv://admin:<PASSWORD>@cluster0.dfotcyb.mongodb.net/natours?retryWrites=true&w=majority
+DATABASE_LOCAL=mongodb://localhost:27017/natours
+DATABASE_PASSWORD=aD0z1aN2FJxL1MaM
