--- a/new-nodejs-express-mongodb-bootcamp/Natour/config.env
+++ b/new-nodejs-express-mongodb-bootcamp/Natour/config.env
@@ -3,3 +3,11 @@ PORT=3000
 DATABASE=mongodb+srv://admin:<PASSWORD>@cluster0.dfotcyb.mongodb.net/natours?retryWrites=true&w=majority
 DATABASE_LOCAL=mongodb://localhost:27017/natours
 DATABASE_PASSWORD=aD0z1aN2FJxL1MaM
+
+JWT_SECRET=d79f395e-a643-4986-9b71-61b924db3429
+JWT_EXPIRES_IN=90d
+
+EMAIL_USERNAME=d612a3182e09dd
+EMAIL_PASSWORD=cd0ede206c1956
+EMAIL_HOST=sandbox.smtp.mailtrap.io
+EMAIL_PORT=587
