--- a/new-nodejs-express-mongodb-bootcamp/Natour/package.json
+++ b/new-nodejs-express-mongodb-bootcamp/Natour/package.json
@@ -6,16 +6,19 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js",
-    "start:prod": "SET NODE_ENV=production & nodemon server.js",
+    "start:prod": " SET NODE_ENV=production&& nodemon server.js",
     "debug": "ndb server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^5.13.21",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.7",
     "slugify": "^1.6.6",
     "validator": "^13.11.0"
   },
