Update source code

--- a/new-nodejs-express-mongodb-bootcamp/Natour/config.env
+++ b/new-nodejs-express-mongodb-bootcamp/Natour/config.env
@@ -6,6 +6,7 @@ DATABASE_PASSWORD=aD0z1aN2FJxL1MaM
 
 JWT_SECRET=d79f395e-a643-4986-9b71-61b924db3429
 JWT_EXPIRES_IN=90d
+JWT_COOKIE_EXPIRES_IN=90
 
 EMAIL_USERNAME=d612a3182e09dd
 EMAIL_PASSWORD=cd0ede206c1956
